--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wixeng",
   "version": "0.1.0",
+  "homepage": "http://bogobogo.github.io/test",
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -9,9 +10,12 @@
     "styled-components": "^1.4.4"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
