--- a/src/projects.json
+++ b/src/projects.json
@@ -5,8 +5,8 @@
         "title": "React Native Navigation",
         "github": "https://github.com/wix/react-native-navigation",
         "AndroidVideoUrl": "",
-        "IOSVideoUrl": "something",
-        "IOSDemoAppLink": "something",
+        "IOSVideoUrl": "https://storage.googleapis.com/legati-app.appspot.com/react-native-interactable-720.mov",
+        "IOSDemoAppLink": "https://storage.googleapis.com/legati-app.appspot.com/react-native-interactable-720.mov",
         "AndroidDemoAppLink": "something"
     },
     "project2": {
@@ -31,7 +31,7 @@
         "title": "Detox",
         "description": "Graybox E2E tests and automation library for mobile",
         "github": "https://github.com/wix/detox",
-        "AndroidVideoUrl": "asdw",
+        "AndroidVideoUrl": "",
         "IOSVideoUrl": "",
         "IOSDemoAppLink": "",
         "AndroidDemoAppLink": ""
