added mac video for detox, still nopt responsive

--- a/src/projects.json
+++ b/src/projects.json
@@ -1,23 +1,36 @@
 {
-    "projectList": ["project1", "project2", "project3", "project4", "project5"],
+    "projectList": [ "project1", "project5", "project4", "project3", "project2"],
+    "project5": {
+        "description" : "Declarative API for handling fluid user interactions with views at 60 FPS in React Native",
+        "title": "React Native Interactable",
+        "github": "https://github.com/wix/react-native-interactable",
+        "AndroidVideoUrl": "",
+        "IOSVideoUrl": "https://storage.googleapis.com/legati-app.appspot.com/react-native-interactable-720.mov",
+        "IOSDemoAppLink": "https://itunes.apple.com/us/app/react-native-interactions/id1209875831?mt=8",
+        "Image": "",
+        "size" : "normal",
+        "AndroidDemoAppLink": ""
+    },
     "project1": {
         "description": "App-wide support for 100% native navigation with an easy cross-platform interface.",
         "title": "React Native Navigation",
         "github": "https://github.com/wix/react-native-navigation",
-        "AndroidVideoUrl": "",
-        "IOSVideoUrl": "https://storage.googleapis.com/legati-app.appspot.com/react-native-interactable-720.mov",
-        "IOSDemoAppLink": "https://storage.googleapis.com/legati-app.appspot.com/react-native-interactable-720.mov",
-        "Image": "s",
-        "AndroidDemoAppLink": "something"
+        "AndroidVideoUrl": "https://wix.github.io/react-native//assets/themes/bootstrap-3/components/images/declerative/oneapp-navigation-movie.mp4",
+        "IOSVideoUrl": "https://wix.github.io/react-native//assets/themes/bootstrap-3/components/images/declerative/oneapp-navigation-movie.mp4",
+        "IOSDemoAppLink": "",
+        "Image": "",
+        "size" : "normal",
+        "AndroidDemoAppLink": ""
     },
     "project2": {
         "description" : "Handle all the aspects of push notifications for your app, including remote and local notifications, interactive notifications, silent notifications, and more.",
         "title": "React Native Notifications",
         "github": "https://github.com/wix/react-native-notifications",
-        "AndroidVideoUrl": "something",
+        "AndroidVideoUrl": "",
         "IOSVideoUrl": "https://wix.github.io/react-native//assets/themes/bootstrap-3/components/images/declerative/oneapp-navigation-movie.mp4",
         "IOSDemoAppLink": "",
         "Image": "",
+        "size" : "normal",
         "AndroidDemoAppLink": ""
     },
     "project3": {
@@ -25,9 +38,10 @@
         "description": "Advanced native camera control with pre-defined aspect ratio, crop and more",
         "github": "https://github.com/wix/react-native-camera-kit",
         "AndroidVideoUrl": "",
-        "IOSVideoUrl": "sd",
-        "IOSDemoAppLink": "sd",
-        "Image": "",
+        "IOSVideoUrl": "",
+        "IOSDemoAppLink": "",
+        "Image": "s",
+        "size" : "normal",
         "AndroidDemoAppLink": ""
     },
     "project4": {
@@ -37,18 +51,9 @@
         "AndroidVideoUrl": "",
         "IOSVideoUrl": "as",
         "IOSDemoAppLink": "",
+        "MacVideoUrl": "https://storage.googleapis.com/legati-app.appspot.com/Rec.mp4",
         "Image": "",
-        "AndroidDemoAppLink": ""
-    },
-    "project5": {
-        "description" : "Handle all the aspects of push notifications for your app, including remote and local notifications, interactive notifications, silent notifications, and more.",
-        "title": "React Native Notifications",
-        "github": "https://github.com/wix/react-native-notifications",
-        "AndroidVideoUrl": "something",
-        "IOSVideoUrl": "https://wix.github.io/react-native//assets/themes/bootstrap-3/components/images/declerative/oneapp-navigation-movie.mp4",
-        "IOSDemoAppLink": "",
-        "Image": "s",
+        "size" : "big",
         "AndroidDemoAppLink": ""
     }
-
 }
