--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-fetch": "^1.6.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "request": "^2.81.0",
     "styled-components": "^1.4.4"
   },
   "devDependencies": {
